[tool.poetry]
name = "dbuspy"
version = "0.1.0"
description = "A D-Feet like TUI program."
readme = "README.md"
authors = ["Chen Linxuan <me@black-desk.cn>"]
homepage = "https://github.com/black-desk/DBuSPY"
repository = "https://github.com/black-desk/DBuSPY"
license = "GPL-2.0-or-later"
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
        "Operating System :: POSIX :: Linux",
        "Topic :: Desktop Environment"
]
keywords = ["D-Bus", "dbus", "Textual"]

[tool.poetry.dependencies]
python = "^3.12"
textual = "^1.0.0"
dbus-next = "^0.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"
textual-dev = "^1.2.1"

[tool.poetry.scripts]
dbuspy = "dbuspy.__main__:main"

[tool.black]
line-length = 80
