[build-system]
requires = ["poetry-core >=1.0.0", "poetry-dynamic-versioning >=1.0.0, ==1.*"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
dynamic = ["version"]
name = "dbuspy"
description = "A D-Feet like TUI program."
readme = "README.md"
license = "GPL-2.0-or-later"
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
        "Operating System :: POSIX :: Linux",
        "Topic :: Desktop Environment",
]
keywords = ["D-Bus", "dbus", "Textual"]
requires-python = ">=3.9.0, <4.0.0"
dependencies = [
        "textual >=1.0.0, ==1.*",
        "dbus-next @ git+https://github.com/black-desk/python-dbus-next.git@DBuSPY",
]

[project.optional-dependencies]
dev = [
        "pytest >=8.3.4, ==8.*",
        "pytest-cov >=6.0.0, ==6.*",
        "textual-dev >=1.7.0, ==1.*",
]

[[project.authors]]
name = "Chen Linxuan"
email = "<me@black-desk.cn>"

[project.urls]
homepage = "https://github.com/black-desk/dbuspy"
repository = "https://github.com/black-desk/dbuspy"
issues = "https://github.com/black-desk/dbuspy/issues"

[project.scripts]
dbuspy = "dbuspy.__main__:main"
DBuSPY = "dbuspy.__main__:main"

[tool.poetry]
# NOTE:
# Update this version to start a auto tag and release github workflow.
# Check ./.github/workflows/auto_tag_and_release.yaml for details.
version = "0.1.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4, ==8.*"
pytest-cov = ">=6.0.0, ==6.*"
textual-dev = ">=1.7.0, ==1.*"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0, ==1.*", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[tool.black]
line-length = 80
